--- a/src/main/resources/config/jdbc.properties
+++ b/src/main/resources/config/jdbc.properties
@@ -11,6 +11,7 @@ jdbc.url=jdbc:mysql://localhost:3306/poinsurance?useUnicode=true&characterEncodi
 jdbc.username=root
 jdbc.password=12345
 ddsajlksadask
+ssssss
 
 #jdbc.url=jdbc:mysql://172.16.52.242:3356/poinsurance?useUnicode=true&characterEncoding=UTF-8
 #jdbc.username=shuailing
