--- a/src/main/resources/config/jdbc.properties
+++ b/src/main/resources/config/jdbc.properties
@@ -12,6 +12,7 @@ jdbc.username=root
 jdbc.password=12345
 ddsajlksadask
 ssssss
+cherry pick
 
 #jdbc.url=jdbc:mysql://172.16.52.242:3356/poinsurance?useUnicode=true&characterEncoding=UTF-8
 #jdbc.username=shuailing
