--- a/src/main/resources/config/jdbc.properties
+++ b/src/main/resources/config/jdbc.properties
@@ -4,7 +4,7 @@
 #jdbc.url=jdbc:mysql://localhost:3306/shareapp?useUnicode=true&characterEncoding=UTF-8&zeroDateTimeBehavior=convertToNull
 #jdbc.username=root
 #jdbc.password=123456
-jdbc.driver=1234
+jdbc.driver=1234jj
 jdbc.driver=com.mysql.jdbc.Driver
 validationQuery=SELECT 1
 jdbc.url=jdbc:mysql://localhost:3306/poinsurance?useUnicode=true&characterEncoding=UTF-8
