--- a/pom.xml
+++ b/pom.xml
@@ -120,44 +120,122 @@
 			<artifactId>druid</artifactId>
 			<version>1.0.18</version>
 		</dependency>
+		<!-- JSTL标签类 -->  
+	    <dependency>  
+	        <groupId>jstl</groupId>  
+	        <artifactId>jstl</artifactId>  
+	        <version>1.2</version>  
+	    </dependency>
 		<!-- 映入JSON -->  
-    <dependency>  
-        <groupId>org.codehaus.jackson</groupId>  
-        <artifactId>jackson-mapper-asl</artifactId>  
-        <version>1.9.13</version>  
-    </dependency>
-    <dependency>
-		<groupId>com.fasterxml.jackson.core</groupId>
-		<artifactId>jackson-core</artifactId>
-		<version>2.7.3</version>
-	</dependency>
-	<dependency>
-		<groupId>com.fasterxml.jackson.core</groupId>
-		<artifactId>jackson-databind</artifactId>
-		<version>2.7.3</version>
-	</dependency>
-	<!-- 上传组件包 -->  
-    <dependency>  
-        <groupId>commons-fileupload</groupId>  
-        <artifactId>commons-fileupload</artifactId>  
-        <version>1.3.1</version>  
-    </dependency> 
-    <dependency>  
-        <groupId>commons-io</groupId>  
-        <artifactId>commons-io</artifactId>  
-        <version>2.4</version>  
-    </dependency>
-    <dependency>  
-        <groupId>commons-codec</groupId>  
-        <artifactId>commons-codec</artifactId>  
-        <version>1.9</version>  
-    </dependency> 
-     <!-- 日志组建 slf4j+logback -->
-	<dependency>
-		<groupId>org.slf4j</groupId>
-		<artifactId>slf4j-api</artifactId>
-		<version>${slf4j.version}</version>
-	</dependency>
+	    <dependency>  
+	        <groupId>org.codehaus.jackson</groupId>  
+	        <artifactId>jackson-mapper-asl</artifactId>  
+	        <version>1.9.13</version>  
+	    </dependency>
+	    <dependency>
+			<groupId>com.fasterxml.jackson.core</groupId>
+			<artifactId>jackson-core</artifactId>
+			<version>2.7.3</version>
+		</dependency>
+		<dependency>
+			<groupId>com.fasterxml.jackson.core</groupId>
+			<artifactId>jackson-databind</artifactId>
+			<version>2.7.3</version>
+		</dependency>
+		<!-- 上传组件包 -->  
+	    <dependency>  
+	        <groupId>commons-fileupload</groupId>  
+	        <artifactId>commons-fileupload</artifactId>  
+	        <version>1.3.1</version>  
+	    </dependency> 
+	    <dependency>  
+	        <groupId>commons-io</groupId>  
+	        <artifactId>commons-io</artifactId>  
+	        <version>2.4</version>  
+	    </dependency>
+	    <dependency>  
+	        <groupId>commons-codec</groupId>  
+	        <artifactId>commons-codec</artifactId>  
+	        <version>1.9</version>  
+	    </dependency> 
+	     <!-- 日志组建 slf4j+logback -->
+		<dependency>
+			<groupId>org.slf4j</groupId>
+			<artifactId>slf4j-api</artifactId>
+			<version>${slf4j.version}</version>
+		</dependency>
+		<dependency>
+		<groupId>ch.qos.logback</groupId>
+		<artifactId>logback-core</artifactId>
+		<version>${logback.version}</version>
+		</dependency>
+		<dependency>  
+		    <groupId>org.logback-extensions</groupId>  
+		    <artifactId>logback-ext-spring</artifactId>  
+		    <version>0.1.2</version>  
+		</dependency>
+		<dependency>
+			<groupId>ch.qos.logback</groupId>
+			<artifactId>logback-classic</artifactId>
+			<version>${logback.version}</version>
+		</dependency>
+		<dependency>
+			<groupId>dom4j</groupId>
+			<artifactId>dom4j</artifactId>
+			<version>1.6.1</version>
+		</dependency>
+		<dependency>
+			<groupId>commons-net</groupId>
+			<artifactId>commons-net</artifactId>
+			<version>3.4</version>
+		</dependency>
+		<dependency>
+			<groupId>org.apache.httpcomponents</groupId>
+			<artifactId>httpclient</artifactId>
+			<version>4.5.2</version>
+		</dependency>
+		<!-- <dependency>
+			<groupId>commons-httpclient</groupId>
+			<artifactId>commons-httpclient</artifactId>
+			<version>3.1</version>
+		</dependency> -->
+		<dependency>
+			<groupId>javax.mail</groupId>
+			<artifactId>mail</artifactId>
+			<version>1.4.7</version>
+		</dependency>
+		<dependency>
+			<groupId>org.apache.poi</groupId>
+			<artifactId>poi</artifactId>
+			<version>3.14</version>
+		</dependency>
+		<dependency>
+				<groupId>com.alibaba</groupId>
+				<artifactId>fastjson</artifactId>
+				<version>${fastjson.version}</version>
+		</dependency>
+		<dependency>
+			<groupId>commons-beanutils</groupId>
+			<artifactId>commons-beanutils</artifactId>
+			<version>1.9.2</version>
+		</dependency>
+		<dependency>
+		    <groupId>org.aspectj</groupId>
+		    <artifactId>aspectjrt</artifactId>
+		    <version>1.8.9</version>
+		</dependency>
+		<!-- cxf begin -->
+		<!-- <dependency>  
+		    <groupId>org.apache.cxf</groupId>  
+		    <artifactId>cxf-rt-frontend-jaxws</artifactId>  
+		    <version>${cxf.version}</version>  
+		</dependency> -->  
+		<!-- <dependency>  
+			<groupId>org.apache.cxf</groupId>  
+			<artifactId>cxf-rt-transports-http</artifactId>  
+			<version>${cxf.version}</version>  
+		</dependency>  --> 
+		<!-- cxf end -->
 	</dependencies>
 	<build>
 		<finalName>bdySite</finalName>
