--- a/src/main/resources/config/jdbc.properties
+++ b/src/main/resources/config/jdbc.properties
@@ -7,21 +7,21 @@
 
 jdbc.driver=com.mysql.jdbc.Driver
 validationQuery=SELECT 1
-jdbc.url=jdbc:mysql://localhost:3306/poinsurance?useUnicode=true&characterEncoding=UTF-8
+jdbc.url=jdbc:mysql://localhost:3306/bdysite?useUnicode=true&characterEncoding=UTF-8
 jdbc.username=root
 jdbc.password=12345
 
 #jdbc.url=jdbc:mysql://172.16.52.242:3356/poinsurance?useUnicode=true&characterEncoding=UTF-8
 #jdbc.username=shuailing
-#jdbc.password=Qiandai.sl.!9818
+#jdbc.password=xirui.sl.!9818
 
 #jdbc.url=jdbc:mysql://192.168.0.105:3306/poinsurance?useUnicode=true&characterEncoding=UTF-8
 #jdbc.username=shuailing
-#jdbc.password=Qiandai.sl.!9818
+#jdbc.password=xirui.sl.!9818
 
 #jdbc.url=jdbc:mysql://10.1.100.254:2546/poinsurance?useUnicode=true&characterEncoding=UTF-8
 #jdbc.username=poinsurance_user
-#jdbc.password=Qiandai.poinsurance_user.!@#4
+#jdbc.password=xirui.poinsurance_user.!@#4
 
 #jdbc.url=jdbc:mysql://172.16.14.43:3306/poinsurance?useUnicode=true&characterEncoding=UTF-8
 #jdbc.username=root
@@ -32,7 +32,7 @@ log.config=dev_logging.xml
 #ftp\u914d\u7f6e
 ftp.url=172.16.22.89
 ftp.port=21
-ftp.user=njqiandai
+ftp.user=njxirui
 ftp.password=time9818
 ftp.path=/insurance/
 ftp.imgs.path=/insurance/images/
@@ -44,20 +44,20 @@ img.upload=D:/images/
 
 adminPath=/a
 
-#clientUrl=https://s.qiandai.com/PingAnController/agentInfoForPA
+#clientUrl=https://s.xirui.com/PingAnController/agentInfoForPA
 clientUrl=http://192.168.0.151:8101/PingAnController/agentInfoForPA
 
-#dealerUrl=https://s.qiandai.com/Jijin/query
+#dealerUrl=https://s.xirui.com/Jijin/query
 dealerUrl=http://192.168.0.151:8101/Jijin/query
 
-posUrl=https://oemnew.qiandai.com/mtmJiJin/GetData.php?channel=busi
+posUrl=https://oemnew.xirui.com/mtmJiJin/GetData.php?channel=busi
 
-posDeale=https://oemnew.qiandai.com/mtmJiJin/GetData.php?channel=checkBalance
+posDeale=https://oemnew.xirui.com/mtmJiJin/GetData.php?channel=checkBalance
 
 #\u94b1\u888b\u5b9d\u5546\u6237\u7248\u6d4b\u8bd5\u73af\u5883
-merchantUrl=https://oem8test.qiandai.net/index
+merchantUrl=https://oem8test.xirui.net/index
 #\u94b1\u888b\u5b9d\u5546\u6237\u7248\u771f\u5b9e\u73af\u5883
-#merchantUrl=https://oem8.qiandai.net/index
+#merchantUrl=https://oem8.xirui.net/index
 merchantUrl=http://10.1.16.2:8080/index
 
 #\u5fae\u4fe1\u914d\u7f6e
