--- a/src/main/resources/config/jdbc.properties
+++ b/src/main/resources/config/jdbc.properties
@@ -9,7 +9,7 @@ jdbc.driver=com.mysql.jdbc.Driver
 validationQuery=SELECT 1
 jdbc.url=jdbc:mysql://localhost:3306/bdysite?useUnicode=true&characterEncoding=UTF-8
 jdbc.username=root
-jdbc.password=12345
+jdbc.password=13913900601
 
 #jdbc.url=jdbc:mysql://172.16.52.242:3356/poinsurance?useUnicode=true&characterEncoding=UTF-8
 #jdbc.username=shuailing
